# OW_closedloop

./: .gitignore  EEG_lifu.py  EEG_testing.py  PSD_saving_calibration.py  PSDprocessing.ipynb  accuracy.ipynb  combined_eeg_lifu_lsl.csv  combined_eeg_lifu_lsl_2back_-1580742246.csv  combined_eeg_lifu_lsl_stroop_-1823432899.csv  combined_eeg_lifu_test.csv  data_merger.py  demo.psyexp  dummy.py  eeg_LSL_gpype2back_bad.csv  eeg_LSL_gpype2back_demo.csv  eeg_LSL_gpype2back_nogui.csv  electric_artifacts.ipynb  erp_analysis.ipynb  gpype_demo.py  hash_func.py  hash_function.py  lifu_markers.csv  lifu_markers_1_2back_-1580742246.csv  lifu_markers_1_2back_active.csv  lifu_markers_1_2back_bad.csv  lifu_markers_1_2back_demo.csv  lifu_markers_1_2back_demo1023.csv  lifu_markers_1_2back_demo1119.csv  lifu_markers_1_2back_demo1129.csv  lifu_markers_1_2back_nogui.csv  lifu_markers_1_2back_sham.csv  lifu_markers_1_2back_test_-1580742246.csv  lifu_markers_1_stroop_-1823432899.csv  lifu_markers_1_test_-1167338989.csv  lifu_markers_test.csv  lifu_psychopy.py  main_pipeline.py  non_gpype_processing.ipynb  not_using.ipynb  notusing.ipynb  (+49 more)
lifu-slicer-temp/: .gitignore  AGENTS.md  CMakeLists.txt  README.md  db_dvc_slicertesting.dvc
lifu-slicer-temp/.dvc/: config
lifu-slicer-temp/.github/workflows/: check-commit-messages.yml
lifu-slicer-temp/OpenLIFUCloudSync/: CMakeLists.txt  OpenLIFUCloudSync.py
lifu-slicer-temp/OpenLIFUCloudSync/OpenLIFUCloudSyncEngine/: CMakeLists.txt  OpenLIFUCloudSyncCLI.py
lifu-slicer-temp/OpenLIFUCloudSync/Resources/UI/: OpenLIFUCloudSync.ui
lifu-slicer-temp/OpenLIFUData/: CMakeLists.txt  OpenLIFUData.py
lifu-slicer-temp/OpenLIFUData/Resources/UI/: OpenLIFUData.ui
lifu-slicer-temp/OpenLIFUDatabase/: CMakeLists.txt  OpenLIFUDatabase.py
lifu-slicer-temp/OpenLIFUDatabase/Resources/UI/: OpenLIFUDatabase.ui
lifu-slicer-temp/OpenLIFUDatabase/Resources/openlifu-database/empty_db/protocols/: protocols.json
lifu-slicer-temp/OpenLIFUDatabase/Resources/openlifu-database/empty_db/subjects/: subjects.json
lifu-slicer-temp/OpenLIFUDatabase/Resources/openlifu-database/empty_db/transducers/: transducers.json
lifu-slicer-temp/OpenLIFUDatabase/Resources/openlifu-database/empty_db/users/: users.json
lifu-slicer-temp/OpenLIFUDatabase/openlifu-sample-database/: .gitattributes  README.md  protocols - Shortcut.lnk
lifu-slicer-temp/OpenLIFUDatabase/openlifu-sample-database/protocols/: dummy.json  neuromod_demo_phantom.json  protocols.json
lifu-slicer-temp/OpenLIFUDatabase/openlifu-sample-database/protocols/neuromod_demo/: neuromod_demo.json
lifu-slicer-temp/OpenLIFUDatabase/openlifu-sample-database/protocols/new_protocol_1/: new_protocol_1.json
lifu-slicer-temp/OpenLIFUDatabase/openlifu-sample-database/protocols/oncolysis_demo/: oncolysis_demo.json
lifu-slicer-temp/OpenLIFUDatabase/openlifu-sample-database/subjects/: subjects.json
lifu-slicer-temp/OpenLIFUDatabase/openlifu-sample-database/subjects/phantom01/: phantom01.json
lifu-slicer-temp/OpenLIFUDatabase/openlifu-sample-database/transducers/: transducers.json
lifu-slicer-temp/OpenLIFUDatabase/openlifu-sample-database/transducers/openlifu_1x180_evt1/: openlifu_1x180_evt1.json
lifu-slicer-temp/OpenLIFUDatabase/openlifu-sample-database/transducers/openlifu_1x400_evt1/: openlifu_1x400_evt1.json  openlifu_1x400_evt1_4-surface.mtl
lifu-slicer-temp/OpenLIFUDatabase/openlifu-sample-database/transducers/openlifu_2x180_evt1/: openlifu_2x180_evt1.json
lifu-slicer-temp/OpenLIFUDatabase/openlifu-sample-database/transducers/openlifu_2x400_evt0/: openlifu_2x400_evt0.json  openlifu_evt0_surf.stl
lifu-slicer-temp/OpenLIFUDatabase/openlifu-sample-database/transducers/openlifu_2x400_evt1/: openlifu_2x400_evt1.json
lifu-slicer-temp/OpenLIFUDatabase/openlifu-sample-database/transducers/openlifu_2x400_evt2b/: openlifu_2x400_evt2b.json
lifu-slicer-temp/OpenLIFUDatabase/openlifu-sample-database/users/: users.json
lifu-slicer-temp/OpenLIFUDatabase/openlifu-sample-database/users/example_admin/: example_admin.json
lifu-slicer-temp/OpenLIFUDatabase/openlifu-sample-database/users/sample_admin/: sample_admin.json
lifu-slicer-temp/OpenLIFUHome/: CMakeLists.txt  OpenLIFUHome.py
lifu-slicer-temp/OpenLIFUHome/Resources/UI/: OpenLIFUHome.ui
lifu-slicer-temp/OpenLIFULib/: CMakeLists.txt
lifu-slicer-temp/OpenLIFULib/OpenLIFULib/: __init__.py  algorithm_input_widget.py  class_definition_widgets.py  coordinate_system_utils.py  events.py  guided_mode_util.py  install_asset_dialog.py  lazyimport.py  notifications.py  parameter_node_utils.py  photoscan.py  sample_data.py  sample_data_cli.py  sample_data_gui.py  session.py  simulation.py  skinseg.py  solution.py  targets.py  transducer.py  transducer_tracking_results.py  transducer_tracking_wizard_utils.py  transform_conversion.py  user_account_mode_util.py  util.py  virtual_fit_results.py  volume_thresholding.py
lifu-slicer-temp/OpenLIFULib/OpenLIFULib/Resources/: python-requirements.txt
lifu-slicer-temp/OpenLIFULogin/: CMakeLists.txt  OpenLIFULogin.py
lifu-slicer-temp/OpenLIFULogin/Resources/UI/: OpenLIFULogin.ui
lifu-slicer-temp/OpenLIFUPrePlanning/: CMakeLists.txt  OpenLIFUPrePlanning.py
lifu-slicer-temp/OpenLIFUPrePlanning/Resources/UI/: OpenLIFUPrePlanning.ui
lifu-slicer-temp/OpenLIFUProtocolConfig/: CMakeLists.txt  OpenLIFUProtocolConfig.py
lifu-slicer-temp/OpenLIFUProtocolConfig/Resources/UI/: OpenLIFUProtocolConfig.ui
lifu-slicer-temp/OpenLIFUSonicationControl/: CMakeLists.txt  OpenLIFUSonicationControl.py
lifu-slicer-temp/OpenLIFUSonicationControl/Resources/UI/: OpenLIFUSonicationControl.ui
lifu-slicer-temp/OpenLIFUSonicationPlanner/: CMakeLists.txt  OpenLIFUSonicationPlanner.py
lifu-slicer-temp/OpenLIFUSonicationPlanner/Resources/UI/: OpenLIFUSonicationPlanner.ui
lifu-slicer-temp/OpenLIFUTransducerLocalization/: CMakeLists.txt  OpenLIFUTransducerLocalization.py
lifu-slicer-temp/OpenLIFUTransducerLocalization/Resources/UI/: OpenLIFUTransducerLocalization.ui  TransducerLocalizationWizard.ui
(+489 files in other folders)
